add Vercel configuration and update project title to Universe

--- a/js/guide/index.html
+++ b/js/guide/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Celestiary - Guide</title>
+  <title>Universe - Guide</title>
   <link rel="stylesheet" href="index.css"/>
   <script type="module">
     import {init} from './index.js';
@@ -41,7 +41,7 @@
         </li>
       </ol>
     </li>
-    <li>Celestial Bodies
+    <li>Universe Bodies
       <ul>
         <li><a href="#stars.html">Stars</a></li>
         <!--<li><a href="#stars-picking.html">Stars Picking</a></li>-->
@@ -61,7 +61,7 @@
         <!--<li><a href="#asteroids.html">Asteroids</a> -->
       </ul>
     </li>
-    <li>Celestial Mechanics
+    <li>Universe Mechanics
       <ul>
         <li><a href="#orbit.html">Orbits</a></li>
         <li><a href="#galaxy.html">Gravity (galaxy)</a></li>
