--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Celestiary - Redirect</title>
+  <title>Universe - Redirect</title>
   <!-- Start Single Page Apps for GitHub Pages -->
   <script type="text/javascript">
     // Single Page Apps for GitHub Pages
