--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>Celestiary - Celestial Simulator</title>
+    <title>Universe - Celestial Simulator</title>
     <meta name="description" content="Astronomical simulator of solar system and local stars"/>
     <meta name="keywords"
           content="javascript webgl astronomy glsl virtual-reality three-js webgl2 glsl-shaders 3d astrophysical-simulation"/>
